tests/syntax/bad/testfile-constant_too_large-1.scala
class A { var x = 2147483648 }
object Main { def main(args: Array[String]) { } }
